# pdf_sprinkles

./: .gcloudignore  .gitignore  MANIFEST.in  README.md  app.yaml.example  app_context.py  document_ai_ocr.py  iap_auth.py  pdf_info.py  pdf_sprinkles.py  pdf_sprinkles_cli.py  pdf_sprinkles_web.py  pyproject.toml  requirements.txt  setup.py  supervisord.conf.example
pdf_sprinkles/: __init__.py  app_context.py  convert.py  convert_test.py  document_ai_ocr.py  iap_auth.py  pdf_info.py  pdf_sprinkles_cli.py  pdf_sprinkles_web.py  resources.py  uimodules.py
pdf_sprinkles/static/: pdf_sprinkles.js
pdf_sprinkles/templates/: index.html
static/: style.css
templates/: details.html
